# medrag-assistant

./: .env.example  .gitignore  README.md
.github/workflows/: ci.yml  keep-alive.yml  render-keep-alive.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/app/api/v1/: audit.py  auth.py  demo.py  documents.py  health.py  invitations.py  queries.py  tenants.py  ws.py
backend/app/core/: auth.py  config.py  database.py  exceptions.py  logging.py
backend/app/middleware/: correlation.py  error_handler.py  logging.py  rate_limit.py
backend/app/models/: __init__.py  audit_log.py  base.py  conversation.py  document.py  document_chunk.py  invitation.py  query_cache.py  query_message.py  tenant.py  user_profile.py
backend/app/providers/: __init__.py  base.py  claude.py  gemini.py  groq.py  huggingface_llm.py  router.py
backend/app/schemas/: auth.py  common.py  document.py  invitation.py  query.py  tenant.py
backend/app/services/: audit_service.py  chunking_service.py  document_processor.py  embedding_service.py  rag_service.py  websocket_manager.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py
backend/tests/: conftest.py  test_api_health.py  test_chunking_service.py  test_core.py  test_provider_router.py
docs/brainstorms/: 2026-03-12-medrag-assistant-brainstorm.md
docs/plans/: 2026-03-12-001-feat-medrag-assistant-full-build-plan.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
scripts/: keep_alive.py  seed_demo_data.py
(+34 files in other folders)
